Change nav styling from positioning to flexbox to prevent overlap

--- a/covrt/src/components/Tutorial.css
+++ b/covrt/src/components/Tutorial.css
@@ -45,11 +45,11 @@
 }
 
 .tutorial-nav-controls {
-    margin-bottom: 3rem;
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex: 1;
+    margin-bottom: 1.5rem;
 }
 
 .prev-next-btns {
@@ -80,12 +80,22 @@
 .tutorial-main-container {
     padding-left: 1rem;
     padding-right: 1rem;
+    height: 100vh;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .step-content {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.step-container {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 @media (min-width: 768px) {
@@ -104,13 +114,16 @@
         border-color: #ACB0BC;
         border-radius: 20px;
         position: relative;
+
+        display: flex;
+        flex-direction: column;
     }
 
     .tutorial-nav-controls {
-        margin-bottom: 3rem;
-        position: absolute;
-        width: 100%;
-        bottom: 0;
-        left: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        flex: 1;
+        margin-bottom: 1.5rem;
     }
 }
